# MLAS

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/codeql/: codeql-config.yml
.github/workflows/: linux_ci.yml  macos_ci.yml  win_ci.yml
cmake/: deps.txt  external_deps.cmake
include/: mlas_gemm_postprocessor.h
include/core/common/logging/: logging.h
include/core/platform/: EigenNonBlockingThreadPool.h  env.h  ort_mutex.h
include/core/session/: onnxruntime_c_api.h
include/core/util/: thread_utils.h
src/: CMakeLists.txt
src/common/: thread_utils.cc  threadpool.cc
src/common/logging/: logging.cc
src/core/platform/apple/logging/: apple_log_sink.mm
src/core/platform/posix/: env.cc
src/core/platform/windows/: env.cc  env.h
src/lib/: CMakeLists.txt  convsym.cpp  platform.cpp  q4_dq.cpp  q4common.h  q4gemm_avx512.cpp  qgemm_kernel_amx.cpp  qlgavgpool.cpp  sqnbitgemm.cpp  sqnbitgemm_kernel_avx2.cpp  sqnbitgemm_kernel_avx512.cpp
src/ort_include/core/common/logging/: logging.h
src/ort_include/core/platform/: EigenNonBlockingThreadPool.h  env.h
src/ort_include/core/session/: onnxruntime_c_api.h
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  bench_computesoftmax.cpp  bench_q4dq.cpp  bench_util.h
tests/unittest/: CMakeLists.txt  test_halfgemm.h  test_hqnbitgemm_neon.cpp  test_util.h
